

class Arma 
{
    private:
       void Golpear();
};