class Barril
{
private:
    /* data */
public:
    Barril(/* args */) {}
    ~Barril() {}
};