

class Enemigo{
    private: 
    void Atacar();
    void Lanzar();
};