class Escalera
{
private:
    /* data */
public:
    Escalera(/* args */) {}
    ~Escalera() {}
};