
class Mario
{
    private:
        void Saltar();
};
    