

class Martillo{
    private:
    void golpear();
};