class Objetivo
{
private:
    /* data */
public:
    Objetivo(/* args */) {}
    ~Objetivo() {}
};