

class Personaje{
    private:
    void mover();
};