

class Puntaje{
    private:
    void aumentar();
};