

class Sonido {
    private: 
    void hablar();
};