

class Vida{
    private:
    void disminuir();

};